@@ -1,4 +1,4 @@
 @echo off
-set ECLIPSE_LIBRARY=lib/eclipselibrary-0.11-with-dependencies.jar
+set ECLIPSE_LIBRARY=lib/eclipselibrary-0.13-with-dependencies-e36.jar
 set ROBOTFRAMEWORK=libext/robotframework-2.5.4.1.jar
-java -Xms256m -Xmx512m -XX:PermSize=64M -XX:MaxPermSize=256M  -Xbootclasspath/a:%ECLIPSE_LIBRARY% -jar  %ROBOTFRAMEWORK% --debugfile jybot.log --loglevel TRACE --outputdir results %* 
+java -Xmx512m -XX:MaxPermSize=256M  -Xbootclasspath/a:%ECLIPSE_LIBRARY% -jar  %ROBOTFRAMEWORK% --debugfile jybot.log --loglevel TRACE --outputdir results %* 
